[package]
name = "firmware"
version = "0.1.0"
authors = ["Sebastian Woetzel <wose@zuendmasse.de>"]

[dependencies]
cortex-m = "0.3.1"
cortex-m-rtfm = "0.2.0"

[dependencies.blue-pill]
git = "https://github.com/japaric/blue-pill"
rev = "4338e167fc0233d25acd9c65b525e0f864b0a86f"

[dependencies.byteorder]
default-features = false
version = "1.0.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.5"

[dependencies.nb]
git = "https://github.com/japaric/nb"
optional = false

[profile.release]
debug = true
lto = true
